tests/init/neg/closureLeak.check
-- Error: tests/init/neg/closureLeak.scala:11:14 -----------------------------------------------------------------------
11 |    l.foreach(a => a.addX(this)) // error
   |              ^^^^^^^^^^^^^^^^^
   |  Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak.
   |  Promoting the value to fully initialized failed due to the following problem:
   |  Cannot prove the argument is fully initialized. Only fully initialized values are safe to leak. Calling trace:
   |  -> l.foreach(a => a.addX(this)) // error	[ closureLeak.scala:11 ]
   |                           ^^^^
